--- a/springbootlearn/pom.xml
+++ b/springbootlearn/pom.xml
@@ -47,6 +47,13 @@
       <scope>true</scope>
     </dependency>
 
+    <!-- fastjson -->
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>fastjson</artifactId>
+      <version>1.2.35</version>
+    </dependency>
+
     <!-- 日志 -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
