--- a/springbootlearn/src/main/resources/application-test.yml
+++ b/springbootlearn/src/main/resources/application-test.yml
@@ -1,2 +1,10 @@
 server:
   port: 8081
+
+# 数据库配置
+spring:
+  datasource:
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/springboot?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
+    username: root
+    password: root
