--- a/springbootlearn/src/main/resources/generatorConfig.properties
+++ b/springbootlearn/src/main/resources/generatorConfig.properties
@@ -1,4 +1,4 @@
-# 记住不能出现空格 不然回报错
+# 涓嶈兘鍑虹幇绌烘牸
 jdbc.driverLocation=E:/repository/mysql/mysql-connector-java/5.1.21/mysql-connector-java-5.1.21.jar
 jdbc.driverClass=com.mysql.jdbc.Driver
 jdbc.connectionURL=jdbc:mysql://192.168.0.51:3306/btsaas?useUnicode=true&amp;characterEncoding=utf-8
