--- a/springbootlearn/pom.xml
+++ b/springbootlearn/pom.xml
@@ -60,6 +60,7 @@
             <artifactId>spring-boot-starter-log4j2</artifactId>
         </dependency>
 
+        <!-- 数据库相关配置 -->
         <!-- jdbc -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -85,13 +86,23 @@
             <artifactId>mybatis-generator-core</artifactId>
             <version>1.3.2</version>
         </dependency>
+        <!-- 数据库配置相关结束 -->
+
+        <!-- 测试相关 -->
+        <!-- spring 单元测试 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <!--<scope>test</scope>-->
+        </dependency>
 
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.11</version>
-            <scope>test</scope>
+            <version>4.12</version>
+            <!--<scope>compile</scope>-->
         </dependency>
+        <!-- 测试相关 结束 -->
     </dependencies>
 
     <build>
