1.增加spring-boot 单元测试 2.增加durid连接池

--- a/springbootlearn/src/main/resources/generatorConfig.properties
+++ b/springbootlearn/src/main/resources/generatorConfig.properties
@@ -1,6 +1,9 @@
 # 不能出现空格
-jdbc.driverLocation=D:/maven/repertory/repo/mysql/mysql-connector-java/5.1.43/mysql-connector-java-5.1.43.jar
+#jdbc.driverLocation=D:/maven/repertory/repo/mysql/mysql-connector-java/5.1.43/mysql-connector-java-5.1.43.jar # home
+jdbc.driverLocation=E:/repository/mysql/mysql-connector-java/5.1.21/mysql-connector-java-5.1.21.jar
 jdbc.driverClass=com.mysql.jdbc.Driver
-jdbc.connectionURL=jdbc:mysql://localhost:3306/spring-boot?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
+#jdbc.connectionURL=jdbc:mysql://localhost:3306/spring-boot?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
+jdbc.connectionURL=jdbc:mysql://192.168.0.51:3306/spring-boot?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
 jdbc.username=root
-jdbc.password=root
+#jdbc.password=root
+jdbc.password=123456
