--- a/springbootlearn/pom.xml
+++ b/springbootlearn/pom.xml
@@ -80,6 +80,13 @@
             <version>1.3.0</version>
         </dependency>
 
+        <!-- springboot,druid 整合包 -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+            <version>1.1.8</version>
+        </dependency>
+
         <!-- generator -->
         <dependency>
             <groupId>org.mybatis.generator</groupId>
