--- a/springbootlearn/pom.xml
+++ b/springbootlearn/pom.xml
@@ -84,7 +84,7 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid-spring-boot-starter</artifactId>
-            <version>1.1.8</version>
+            <version>1.1.9</version>
         </dependency>
 
         <!-- generator -->
@@ -94,6 +94,17 @@
             <version>1.3.2</version>
         </dependency>
         <!-- 数据库配置相关结束 -->
+
+        <!-- 缓存 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>net.sf.ehcache</groupId>
+            <artifactId>ehcache</artifactId>
+        </dependency>
 
         <!-- 测试相关 -->
         <!-- spring 单元测试 -->
