--- a/springbootlearn/src/main/resources/application-dev.yml
+++ b/springbootlearn/src/main/resources/application-dev.yml
@@ -1,7 +1,7 @@
 server:
-  port: 8080
+  port: 8081
 
-# 数据库配置
+# 数据库配置 durid 连接池
 # home
 #spring:
 #  datasource:
@@ -17,10 +17,6 @@ spring:
     url: jdbc:mysql://192.168.0.51:3306/spring-boot?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
     username: root
     password: 123456
-
-# 修改数据源
-spring:
-  datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     initial-size: 5
     min-idle: 5
@@ -36,7 +32,14 @@ spring:
     max-pool-prepared-statement-per-connection-size: 20
     filters: stat,wall,log4j
 
+  # 配置缓存  缓存类型（ehcache、redis）
+  cache:
+    type: ehcache
+    ehcache:
+      config: classpath:ehcache.xml
+
 # mybatis 配置扫描xml文件 domain对象
 mybatis:
   type-aliases-package: com.guo.springboot.domain
   mapper-locations: classpath:mybatis/mapper/com/guo/springboot/dao/*.xml
+
