--- a/springbootlearn/src/main/resources/application-test.yml
+++ b/springbootlearn/src/main/resources/application-test.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8081
+  port: 8082
 
 # 数据库配置
 spring:
@@ -8,6 +8,24 @@ spring:
     url: jdbc:mysql://localhost:3306/spring-boot?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
     username: root
     password: root
+
+# 修改数据源 使用连接池
+spring:
+  datasource:
+    type: com.alibaba.druid.pool.DruidDataSource
+    initial-size: 5
+    min-idle: 5
+    max-active: 20
+    max-wait: 60000
+    time-between-eviction-runs-millis: 60000
+    min-evictable-idle-time-millis: 300000
+    validation-query: SELECT 1 FROM DUAL
+    test-while-idle: true
+    test-on-borrow: false
+    test-on-return: false
+    pool-prepared-statements: true
+    max-pool-prepared-statement-per-connection-size: 20
+    filters: stat,wall,log4j
 
 # mybatis 配置扫描xml文件 domain对象
 mybatis:
