--- a/springbootlearn/pom.xml
+++ b/springbootlearn/pom.xml
@@ -106,6 +106,13 @@
             <artifactId>ehcache</artifactId>
         </dependency>
 
+        <!-- jwt 相关 -->
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.0</version>
+        </dependency>
+
         <!-- 测试相关 -->
         <!-- spring 单元测试 -->
         <dependency>
