--- a/springbootlearn/pom.xml
+++ b/springbootlearn/pom.xml
@@ -128,6 +128,13 @@
             <!--<scope>compile</scope>-->
         </dependency>
         <!-- 测试相关 结束 -->
+
+        <!-- shiro -->
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-spring</artifactId>
+            <version>1.4.0</version>
+        </dependency>
     </dependencies>
 
     <build>
