--- a/springbootlearn/src/main/resources/application-dev.yml
+++ b/springbootlearn/src/main/resources/application-dev.yml
@@ -3,40 +3,40 @@ server:
 
 # 数据库配置 durid 连接池
 # home
+spring:
+  datasource:
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/spring-boot?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
+    username: root
+    password: root
+
+# company
 #spring:
 #  datasource:
 #    driver-class-name: com.mysql.jdbc.Driver
 #    url: jdbc:mysql://localhost:3306/spring-boot?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
 #    username: root
-#    password: root
-
-# company
-spring:
-  datasource:
-    driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://192.168.0.51:3306/spring-boot?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
-    username: root
-    password: 123456
-    type: com.alibaba.druid.pool.DruidDataSource
-    initial-size: 5
-    min-idle: 5
-    max-active: 20
-    max-wait: 60000
-    time-between-eviction-runs-millis: 60000
-    min-evictable-idle-time-millis: 300000
-    validation-query: SELECT 1 FROM DUAL
-    test-while-idle: true
-    test-on-borrow: false
-    test-on-return: false
-    pool-prepared-statements: true
-    max-pool-prepared-statement-per-connection-size: 20
-    filters: stat,wall,log4j
-
-  # 配置缓存  缓存类型（ehcache、redis）
-  cache:
-    type: ehcache
-    ehcache:
-      config: classpath:ehcache.xml
+#    password: 123456
+#    type: com.alibaba.druid.pool.DruidDataSource
+#    initial-size: 5
+#    min-idle: 5
+#    max-active: 20
+#    max-wait: 60000
+#    time-between-eviction-runs-millis: 60000
+#    min-evictable-idle-time-millis: 300000
+#    validation-query: SELECT 1 FROM DUAL
+#    test-while-idle: true
+#    test-on-borrow: false
+#    test-on-return: false
+#    pool-prepared-statements: true
+#    max-pool-prepared-statement-per-connection-size: 20
+#    filters: stat,wall,log4j
+#
+#  # 配置缓存  缓存类型（ehcache、redis）
+#  cache:
+#    type: ehcache
+#    ehcache:
+#      config: classpath:ehcache.xml
 
 # mybatis 配置扫描xml文件 domain对象
 mybatis:
