--- a/springbootlearn/pom.xml
+++ b/springbootlearn/pom.xml
@@ -141,6 +141,13 @@
             <artifactId>shiro-spring</artifactId>
             <version>1.4.0</version>
         </dependency>
+
+        <!-- alipay -->
+        <dependency>
+            <groupId>com.alipay.sdk</groupId>
+            <artifactId>alipay-sdk-java</artifactId>
+            <version>3.3.49.ALL</version>
+        </dependency>
     </dependencies>
 
     <build>
