--- a/springbootlearn/src/main/resources/application-dev.yml
+++ b/springbootlearn/src/main/resources/application-dev.yml
@@ -6,9 +6,9 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/spring-boot?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
+    url: jdbc:mysql://192.168.0.51:3306/spring-boot?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
     username: root
-    password: root
+    password: 123456
 
 # company
 #spring:
@@ -31,8 +31,8 @@ spring:
 #    pool-prepared-statements: true
 #    max-pool-prepared-statement-per-connection-size: 20
 #    filters: stat,wall,log4j
-#
-#  # 配置缓存  缓存类型（ehcache、redis）
+
+  # 配置缓存  缓存类型（ehcache、redis）
 #  cache:
 #    type: ehcache
 #    ehcache:
