--- a/springbootlearn/pom.xml
+++ b/springbootlearn/pom.xml
@@ -200,7 +200,19 @@
             <version>3.9.0</version>
         </dependency>
 
+        <!-- 生成二维码 -->
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>core</artifactId>
+            <version>2.2</version>
+        </dependency>
 
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>javase</artifactId>
+            <version>2.2</version>
+        </dependency>
+        <!-- 生成二维码 -->
 
 
     </dependencies>
