--- a/springbootlearn/pom.xml
+++ b/springbootlearn/pom.xml
@@ -253,6 +253,13 @@
             <version>4.5.2</version>
         </dependency>
 
+        <!-- netty -->
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.6.Final</version>
+        </dependency>
+
 
 
     </dependencies>
