--- a/springbootlearn/pom.xml
+++ b/springbootlearn/pom.xml
@@ -123,11 +123,15 @@
         <dependency>
             <groupId>org.apache.rocketmq</groupId>
             <artifactId>rocketmq-client</artifactId>
-            <version>4.3.0</version>
+            <version>4.5.2</version>
         </dependency>
 
-
-
+        <!-- fastjson -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.35</version>
+        </dependency>
 
 
         <!-- 测试相关 -->
