--- a/springbootlearn/pom.xml
+++ b/springbootlearn/pom.xml
@@ -285,6 +285,13 @@
             <version>4.0.0</version>
         </dependency>
 
+        <!--kafka-->
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+
 
 
     </dependencies>
